--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>Anne Joseph</h1>
+        <h1 class='masthead-heading'>Anne Joseph</h1> 
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Software Developer...</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Westcheser County, NY...</p>
       <h1>What are your favorite hobbies?</h1>
       <p>Details here...</p>
       <h1>What's your dream job?</h1>
